attempting to solve white bar bug on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ a {
   margin-top: 130px;
   margin-bottom: 10px;
 
-  position: absolute;
+  position: static;
 }
 
 
